# blazity-hackaton

./: AGENTS.md  RUN.md
.ai/: LANGUAGE.md  config.json
.ai/memory/: README.md  architecture.md  product.md  stack.md
.ai/plans/: 2026-06-30-content-tool.md
.ai/research/: 2026-06-30-content-tool-design.md
.ai/skills/atlas-review/: SKILL.md
.ai/skills/atlas-setup/: SKILL.md  customization.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py  settings.py
backend/app/clients/: claude.py  creatomate.py  facebook.py  falvideo.py  replicate_video.py
backend/app/routers/: compose.py  examples.py  generate.py  publish.py  video.py
backend/tests/: test_compose.py  test_examples.py  test_generate.py  test_health.py  test_publish.py  test_settings.py  test_video.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts  index.css
